--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,9 @@ google_analytics:
     proxy_endpoint: ''
     cache: false  # pv data local cache, good for the users from GFW area.
 
+baidu_analytics:
+
+
 disqus:
   comments: true  # boolean type, the global switch for posts comments.
   shortname: 'https-j-strawhat-github-io'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
