--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,7 @@ defaults:
       layout: post
       comments: true    # Enable comments in posts.
       toc: true         # Display TOC column in posts.
+      toc_levels: 1……4  #????
       breadcrumb:
         -
           label: Posts
