--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -8,15 +8,15 @@
   type: github
   icon: 'fab fa-github-alt'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+  type: music
+  icon: 'fas fa-compact-disc'
 -
   type: email
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
 -
   type: rss
-  icon: 'fas fa-rss'
+  icon: 'fas fa-rss-square'
   noblank: true
 
 # Uncomment and complete the url below to enable more contact options
