--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://gitee.com/j__strawhat/MyImages/raw/master/avatar.jpg
+avatar: https://gitee.com/j__strawhat/MyImages/raw/master/img/avatar.webp
 
 # boolean type, the global switch for ToC in posts.
 toc: true
