--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description:                         # used by seo meta and the atom feed
   Welcome to my personal blog.
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: 'https://J-StrawHat.github.io'
+url: 'https://joydee.top'
 
 author: JoyDee                  # change to your full name
 
@@ -37,7 +37,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: '/J-StrawHat.github.io'
+baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: Asia/Shanghai
