--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/sample/avatar.jpg
+avatar: /assets/img/sample/avatar.jpeg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
