--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://gitee.com/j__strawhat/MyImages/raw/master/img/avatar.webp
+avatar: /assets/img/sample/avatar.jpeg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
