--- a/_config.yml
+++ b/_config.yml
@@ -57,20 +57,11 @@ google_analytics:
 
 
 
-# valine_comment:
-#  enable: true
-# app_id
-#  leancloud_appid: EENEA9r3ULJmKLcsgKxSCNqh-gzGzoHsz
-# app_key
-#  leancloud_appkey: IcFH9q9WfYblgGkcR0fq9OYh
-# placeholde
-#  placeholder: “Share your ideas"
-
 valine_comment:
   enable: true
   leancloud_appid: EENEA9r3ULJmKLcsgKxSCNqh-gzGzoHsz
   leancloud_appkey: IcFH9q9WfYblgGkcR0fq9OYh
-  placeholder: 留下你的评论吧，支持markdown语法！填写邮箱还能获得回复通知噢！
+  placeholder: 留下你的评论吧，支持markdown语法，没有填写网址也没关系
 
 disqus:
   comments: false  # boolean type, the global switch for posts comments.
