Update the post on Java & add Chinese characters on pannel

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: JoyDee's Blog                          # the main title
 
-tagline: The dream is still alive.  # it will display as the sub-title
+tagline: Cause I have a dream.  # it will display as the sub-title
 
 description:                         # used by seo meta and the atom feed
   Welcome to my personal blog.
