--- a/_data/label.yml
+++ b/_data/label.yml
@@ -1,19 +1,19 @@
 # The label text of site.
 
 panel:
-  lastmod: Recent Update
-  trending_tags: Trending Tags
-  toc: Contents
+  lastmod: 最近更新 / Recent Update
+  trending_tags: 热门标签 / Trending Tags
+  toc: 文章目录 / Contents
 
 post:
   relate_posts: Further Reading
   share: Share
   button:
-    next: Newer
-    previous: Older
+    next: Newer >
+    previous: < Older
 
-search_hint: Search   # text show on search bar
+search_hint: 搜索一下   # text show on search bar
 
-pin_prompt: Pinned    # pinned prompt
+pin_prompt: 置顶    # pinned prompt
 
 read_time_unit: min   # see posts' time to read
