--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ valine_comment:
   enable: true
   leancloud_appid: CJeb6b1PaepqmfiV6HFEgPFM-MdYXbMMI
   leancloud_appkey: pAaJnzwcML3OuaGyI4aHjfge
-  placeholder: 昵称填上你的QQ号，留下评论吧，支持markdown语法!
+  placeholder: 昵称填上你的QQ号能够收到邮件提醒，网址可以不填噢，评论支持markdown语法!
 
 disqus:
   comments: false  # boolean type, the global switch for posts comments.
